// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for model: 911, safe-zone: true, size: inherit, color: inherit and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  background: #000;
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.min.b68f913216168583298ccf83f1a6b8d5.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}"
`;

exports[`getComponentCss() should return correct css for model: 911, safe-zone: true, size: inherit, color: inherit and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  background: #000;
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.min.b68f913216168583298ccf83f1a6b8d5.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}"
`;

exports[`getComponentCss() should return correct css for model: 911, safe-zone: true, size: inherit, color: primary and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.min.b68f913216168583298ccf83f1a6b8d5.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: #FBFCFF !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}"
`;

exports[`getComponentCss() should return correct css for model: 911, safe-zone: true, size: inherit, color: primary and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.min.b68f913216168583298ccf83f1a6b8d5.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  background: #010205 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}"
`;

exports[`getComponentCss() should return correct css for model: 911, safe-zone: true, size: small, color: contrast-high and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.min.b68f913216168583298ccf83f1a6b8d5.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  width: 94px !important;
  background: #AFB0B3 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}"
`;

exports[`getComponentCss() should return correct css for model: 911, safe-zone: true, size: small, color: contrast-high and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.min.b68f913216168583298ccf83f1a6b8d5.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  width: 94px !important;
  background: #535457 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}"
`;

exports[`getComponentCss() should return correct css for model: 911, safe-zone: true, size: small, color: contrast-low and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.min.b68f913216168583298ccf83f1a6b8d5.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  width: 94px !important;
  background: #404044 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}"
`;

exports[`getComponentCss() should return correct css for model: 911, safe-zone: true, size: small, color: contrast-low and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.min.b68f913216168583298ccf83f1a6b8d5.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  width: 94px !important;
  background: #D8D8DB !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}"
`;

exports[`getComponentCss() should return correct css for model: 911, safe-zone: true, size: small, color: contrast-medium and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.min.b68f913216168583298ccf83f1a6b8d5.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  width: 94px !important;
  background: #88898C !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}"
`;

exports[`getComponentCss() should return correct css for model: 911, safe-zone: true, size: small, color: contrast-medium and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.min.b68f913216168583298ccf83f1a6b8d5.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  width: 94px !important;
  background: #6B6D70 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}"
`;

exports[`getComponentCss() should return correct css for model: 911, safe-zone: true, size: small, color: inherit and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  background: #000;
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.min.b68f913216168583298ccf83f1a6b8d5.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  width: 94px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}"
`;

exports[`getComponentCss() should return correct css for model: 911, safe-zone: true, size: small, color: inherit and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  background: #000;
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.min.b68f913216168583298ccf83f1a6b8d5.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  width: 94px !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}"
`;

exports[`getComponentCss() should return correct css for model: 911, safe-zone: true, size: small, color: primary and theme: dark 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.min.b68f913216168583298ccf83f1a6b8d5.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  width: 94px !important;
  background: #FBFCFF !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}"
`;

exports[`getComponentCss() should return correct css for model: 911, safe-zone: true, size: small, color: primary and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/911.min.b68f913216168583298ccf83f1a6b8d5.svg) no-repeat left top / contain !important;
  aspect-ratio: 94 / 36 !important;
  width: 94px !important;
  background: #010205 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}"
`;

exports[`getComponentCss() should return correct css for model: cayenne, safe-zone: false, size: small, color: primary and theme: auto 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/cayenne.min.25562011631a831516f91ec31d144104.svg) no-repeat left top / contain !important;
  aspect-ratio: 245 / 35 !important;
  width: 245px !important;
  background: #010205 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}
@media (prefers-color-scheme: dark) {
  :host {
    background: #FBFCFF !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for model: cayenne, safe-zone: false, size: small, color: primary and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/cayenne.min.25562011631a831516f91ec31d144104.svg) no-repeat left top / contain !important;
  aspect-ratio: 245 / 35 !important;
  width: 245px !important;
  background: #010205 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}"
`;

exports[`getComponentCss() should return correct css for model: cayenne, safe-zone: true, size: small, color: primary and theme: light 1`] = `
":host {
  display: inline-block;
  vertical-align: top;
  max-width: 100%;
  max-height: 100%;
  mask: url(https://cdn.ui.porsche.com/porsche-design-system/model-signatures/cayenne.min.25562011631a831516f91ec31d144104.svg) no-repeat left top / contain !important;
  aspect-ratio: 245 / 36 !important;
  width: 245px !important;
  background: #010205 !important;
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(:is(img,video)) {
  display: block !important;
  width: 100% !important;
  height: 100% !important;
  object-fit: cover !important;
}
img {
  position: absolute;
  opacity: 0;
  width: 1px;
  height: 1px;
}"
`;
